<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="aboutApp">" AlReaderX© 2018–2023,&lt;br> Odessa, Neverland&lt;br> Written by &lt;b>Alan&lt;/b> https://www.alreader.com alan@alreader.com&lt;br> Free for Home use&lt;br> &lt;br> Privacy Policy:&lt;br> The AlReaderX (AlReaderXPro) applications does not use any private data of the customer. Phone numbers and other personal data are not analyzed by the program, they are not stored and not used.&lt;br> http://alreader.com/privacyX.html&lt;br> &lt;br> Special thanks:&lt;br> MSWord (doc) - Mike Sinkovsky&lt;br> 3D Animation (OpenGL) - Sergei Maksimets&lt;br> Web Sync and Tops - Konstantin Pogorelov&lt;br> Sending a log by mail - virxkane&lt;br>&lt;br> Graphic design:&lt;br> Dmitry Petuk, Lenhenster&lt;br>&lt;br> Localization:&lt;br> Gmyza Anatoliy (be), Sergej Reznik Dasdranagon, Michael Scheer (de), Gonzalo Prieto (es), OwlinCowl (uk) &lt;br> "</string>
    <string name="aboutAppOnyx">AlReaderX© 2018–2023,&lt;br> Odessa, Neverland&lt;br> Developed by &lt;b>Alan&lt;/b> for MacCentre LLC. alan@alreader.com &lt;br> &lt;br> Privacy Policy:&lt;br> The AlReaderX (AlReaderXPro) applications does not use any private data of the customer. Phone numbers and other personal data are not analyzed by the program, they are not stored and not used.&lt;br> http://alreader.com/privacyX.html&lt;br> &lt;br> Special thanks:&lt;br> MSWord (doc) - Mike Sinkovsky&lt;br> 3D Animation (OpenGL) - Sergei Maksimets&lt;br> Web Sync and Tops - Konstantin Pogorelov&lt;br> Sending a log by mail - virxkane&lt;br>&lt;br> Graphic design:&lt;br> Dmitry Petuk, Lenhenster http://ys-3.ru&lt;br>&lt;br> Localization:&lt;br> Gmyza Anatoliy (be), Sergej Reznik, Michael Scheer (de), Gonzalo Prieto (es), OwlinCowl (uk) &lt;br></string>
    <string name="aboutCode">" This program uses the fonts:&lt;br> inglobal (http://www.inglobal.ru)&lt;br> Licensed under the Apache License, Version 2.0&lt;br> http://www.apache.org/licenses/LICENSE-2.0&lt;br> Google Material Icons (http://google.github.io/material-design-icons)&lt;br> Licensed under the Apache License, Version 2.0&lt;br> http://www.apache.org/licenses/LICENSE-2.0&lt;br> PT Serif (http://www.paratype.ru)&lt;br> Licensed under the Open Font License.&lt;br> Philosopher (https://fontstorage.com/ru/foundry/jovanny-lemonad/)&lt;br> Licensed under the Open Font License.&lt;br>&lt;br> This program uses the code:&lt;br> Color Picker https://github.com/QuadFlask/colorpicker&lt;br> Licensed under the Apache License, Version 2.0 (the License);&lt;br> you may not use this file except in compliance with the License.&lt;br> You may obtain a copy of the License at&lt;br> http://www.apache.org/licenses/LICENSE-2.0&lt;br> Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.&lt;br>&lt;br> juniversalchardet is a Java port of 'universalchardet', that is the encoding detector library of Mozilla &lt;br>https://code.google.com/archive/p/juniversalchardet/&lt;br> The library is subject to the Mozilla Public License Version 1.1. &lt;br>&lt;br> UnRAR - https://www.rarlab.com/ (Alexander Roshal), the source code of UnRAR utility is freeware&lt;br> unrar-android&lt;br> https://github.com/maoabc/unrar-android&lt;br> Licensed under the Apache License, Version 2.0 (the License);&lt;br> you may not use this file except in compliance with the License.&lt;br> You may obtain a copy of the License at&lt;br> http://www.apache.org/licenses/LICENSE-2.0&lt;br> &lt;br>&lt;br> AndroidSVG is a SVG parser and renderer for Android.&lt;br> AndroidSVG is licensed under the Apache License v2.0.&lt;br> https://bigbadaboom.github.io/androidsvg/index.html &lt;br>&lt;br> OkHttp is an HTTP client for Android.&lt;br> OkHttp is licensed under the Apache License v2.0.&lt;br> https://square.github.io/okhttp/ &lt;br>&lt;br> sardine-android is a WebDAV client for Android.&lt;br> sardine-android is licensed under the Apache License v2.0.&lt;br> https://github.com/thegrizzlylabs/sardine-android &lt;br>&lt;br> CHM lib0.40 is a library for dealing with Microsoft ITSS/CHM format files.&lt;br> https://github.com/jedwing/CHMLib&lt;br> This project is licensed using LGPL v2.1 &lt;br>&lt;br> JSch is a pure Java implementation of SSH2. http://www.jcraft.com/jsch/ JSch is licensed under BSD style license. &lt;br>&lt;br> bare-bones-digest, HTTP digest authentication for Android, Copyright (c) 2015, 2016, 2017 Petter Wintzell&lt;br> https://github.com/al-broco/bare-bones-digest&lt;br> This project is licensed using The MIT License (MIT) &lt;br>&lt;br> Apache James Mime4J provides a parser for e-mail message streams in plain rfc822 and MIME format&lt;br> https://james.apache.org/mime4j/&lt;br> This project is licensed under the Apache License v2.0. &lt;br>&lt;br> "</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_autority">com.neverland.alreaderext.fileprovider</string>
    <string name="app_name">SVGKit</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_load">Load</string>
    <string name="button_ok">OK</string>
    <string name="button_replace">Replace</string>
    <string name="button_save">Save</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="command_add_quickbookmark">@string/tooltip_menu_quickbookmark</string>
    <string name="command_add_quickcite">@string/tooltip_menu_quickcite</string>
    <string name="command_autoscroll">Autoscroll</string>
    <string name="command_backward">@string/tooltip_menu_backward</string>
    <string name="command_block_touch">Lock touch screen</string>
    <string name="command_bookmark_sync">Bookmark sync</string>
    <string name="command_change_daynight">@string/tooltip_menu_daynignt</string>
    <string name="command_dec_backlight">@string/tooltip_menu_backlightdec</string>
    <string name="command_dec_font">@string/tooltip_menu_fontsizedec</string>
    <string name="command_deletebook">Delete book</string>
    <string name="command_dictionary">Dictionary</string>
    <string name="command_end_document">Go to End</string>
    <string name="command_favorites">@string/tooltip_menu_favorites</string>
    <string name="command_fixrotate">Fix orientation</string>
    <string name="command_forward">@string/tooltip_menu_forward</string>
    <string name="command_fullscreen">@string/tooltip_menu_fullscreen</string>
    <string name="command_gotopercent">@string/tooltip_menu_preview</string>
    <string name="command_home">Minimize the program</string>
    <string name="command_inc_backlight">@string/tooltip_menu_backlightinc</string>
    <string name="command_inc_font">@string/tooltip_menu_fontsizeinc</string>
    <string name="command_info">@string/tooltip_menu_bookinfo</string>
    <string name="command_load_previousebook">Load prev book</string>
    <string name="command_load_profile1">Load profile 1</string>
    <string name="command_load_profile2">Load profile 2</string>
    <string name="command_load_profile3">Load profile 3</string>
    <string name="command_load_profile4">Load profile 4</string>
    <string name="command_load_profile5">Load profile 5</string>
    <string name="command_load_profile6">Load profile 6</string>
    <string name="command_load_profile7">Load profile 7</string>
    <string name="command_load_profile8">Load profile 8</string>
    <string name="command_load_profile9">Load profile 9</string>
    <string name="command_local_library">@string/tooltip_menu_local_library</string>
    <string name="command_main_menu">Menu</string>
    <string name="command_next_content">Next chapter</string>
    <string name="command_next_item">Next Item</string>
    <string name="command_next_page">Next Page</string>
    <string name="command_next_profile">Next profile</string>
    <string name="command_nextsearch">Next search result</string>
    <string name="command_nothins">None</string>
    <string name="command_onyx_leftrotate">Rotate screen left</string>
    <string name="command_onyx_refresh">Refresh screen</string>
    <string name="command_onyx_rightrotate">Rotate screen right</string>
    <string name="command_onyx_rotate180">Rotate screen 180 degrees</string>
    <string name="command_opds">@string/tooltip_menu_opds</string>
    <string name="command_open_book">@string/tooltip_menu_openbook</string>
    <string name="command_open_file">@string/tooltip_menu_openfile</string>
    <string name="command_opendocument">@string/tooltip_menu_opendocument</string>
    <string name="command_options">@string/tooltip_menu_settings</string>
    <string name="command_prev_content">Prev chapter</string>
    <string name="command_prev_item">Prev Item</string>
    <string name="command_prev_page">Prev Page</string>
    <string name="command_prev_profile">Prev profile</string>
    <string name="command_prevsearch">Prev search result</string>
    <string name="command_quickpanel">Quick Panel</string>
    <string name="command_read_readpos">Read synchronized reading position</string>
    <string name="font_icon_bookmark_border"></string>
    <string name="font_icon_cancel"></string>
    <string name="font_icon_content_copy"></string>
    <string name="font_icon_favour"></string>
    <string name="font_icon_g_translate"></string>
    <string name="font_icon_share"></string>
</resources>