<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/mainlayout" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:id="@id/buttonfake" android:background="@null" android:visibility="invisible" android:layout_width="1.0px" android:layout_height="1.0px" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/borderlayout" android:tag="paint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:layout_centerHorizontal="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:id="@id/buttonDictionary" android:background="@null" android:layout_width="@dimen/form_button_menu_height" android:layout_height="@dimen/button_height" android:text="@string/font_icon_g_translate" app:layout_constraintBottom_toTopOf="@id/buttonShareText" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/buttonCopy" app:layout_constraintTop_toTopOf="parent" />
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:id="@id/buttonCopy" android:background="@null" android:layout_width="@dimen/form_button_menu_height" android:layout_height="@dimen/button_height" android:text="@string/font_icon_content_copy" app:layout_constraintBottom_toTopOf="@id/buttonShareLast" app:layout_constraintLeft_toRightOf="@id/buttonDictionary" app:layout_constraintRight_toLeftOf="@id/buttonClose" app:layout_constraintTop_toTopOf="parent" />
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:id="@id/buttonClose" android:background="@null" android:layout_width="@dimen/form_button_menu_height" android:layout_height="@dimen/button_height" android:text="@string/font_icon_cancel" app:layout_constraintBottom_toTopOf="@id/buttonAddBookmark" app:layout_constraintLeft_toRightOf="@id/buttonCopy" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <com.neverland.viscomp.dialogs.MenuButton android:enabled="false" android:textSize="@dimen/icon_font_size" android:id="@id/buttonShareText" android:background="@null" android:layout_width="@dimen/form_button_menu_height" android:layout_height="@dimen/button_height" android:text="@string/font_icon_share" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="@id/buttonDictionary" app:layout_constraintRight_toRightOf="@id/buttonDictionary" app:layout_constraintTop_toBottomOf="@id/buttonDictionary" />
            <com.neverland.viscomp.dialogs.MenuButton android:enabled="false" android:textSize="@dimen/icon_font_size" android:id="@id/buttonShareLast" android:background="@null" android:layout_width="@dimen/form_button_menu_height" android:layout_height="@dimen/button_height" android:text="@string/font_icon_favour" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="@id/buttonCopy" app:layout_constraintRight_toRightOf="@id/buttonCopy" app:layout_constraintTop_toBottomOf="@id/buttonClose" />
            <com.neverland.viscomp.dialogs.MenuButton android:textSize="@dimen/icon_font_size" android:id="@id/buttonAddBookmark" android:background="@null" android:layout_width="@dimen/form_button_menu_height" android:layout_height="@dimen/button_height" android:text="@string/font_icon_bookmark_border" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="@id/buttonClose" app:layout_constraintRight_toRightOf="@id/buttonClose" app:layout_constraintTop_toBottomOf="@id/buttonClose" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>